force-app/main/default/objects/Career__c/fields/job_Discription__c.field-meta.xml
<CustomField>
    <fullName>job_Discription__c</fullName>
    <inlineHelpText>Please add JD</inlineHelpText>
    <label>job Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>